re PR c++/10549 (ICE in store_bit_field on bitfields that exceed the precision of the declared type.)

PR c++/10549
	* class.c (layout_class_type): Mark overlong bitfields as having
	the maximum size permitted by their type, after layout.

	PR c++/10549
	* g++.dg/other/bitfield1.C: New test.

From-SVN: r66257